Made Query for views, config of the style e created HTML template

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Testing Schedule</h1>
+    <div class="main-content">
+        {% block content %}
+        {% endblock content %}
+    </div>
+    
 </body>
 </html>
