--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,41 +1,12 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
-    <title>Document</title>
+    {% include 'global/partials/head.html' %}
 </head>
 
 <body>
-    <header class="header">
-        <h1 class="header-heading">
-            <a class="header-link" href={% url 'contact:index' %}>Contacts</a>
-        </h1>
-
-        <nav class="menu">
-            <ul class="menu-list">
-                <li class="menu-item">
-                    <a class="menu-link" href="#">Link 1</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-link" href="#">Link 2</a>
-                </li>
-            </ul>
-        </nav>
-
-        <div class="input">
-            <form action="" method="get">
-                <input type="search" class="search-input" id="search" name="q">
-            </form>
-
-        </div>
-    </header>
-
-
-
+    {% include 'global/partials/header.html' %}
     <div class="main-content">
         {% block content %}
         {% endblock content %}
