Created partials / Using class Paginator for pagination in Django

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -10,6 +10,7 @@
     <div class="main-content">
         {% block content %}
         {% endblock content %}
+    {% include 'global/partials/paginator.html' %}
     </div>
 
 </body>
