--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -7,10 +7,12 @@
 
 <body>
     {% include 'global/partials/header.html' %}
+    {% include 'global/partials/message.html' %}
+
     <div class="main-content">
         {% block content %}
         {% endblock content %}
-    {% include 'global/partials/paginator.html' %}
+        {% include 'global/partials/paginator.html' %}
     </div>
 
 </body>
